--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -514,9 +514,16 @@ body {
         </a>
     </div>
 
-    <script src="/BeeMazing-Y1/shared/taskrotations.js"></script>
+    <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
     <script>
+
+
+if (typeof calculateIndividualProgress === 'undefined') {
+    console.error("taskrotations.js failed to load or does not contain calculateIndividualProgress");
+} else {
+    console.log("taskrotations.js loaded successfully");
+}
 
         // Dynamically highlight the active footer icon
         document.querySelectorAll('.footer a').forEach(link => {
@@ -533,25 +540,7 @@ body {
         const formatDate = (d) => d.toISOString().split("T")[0];
         
 
-        function parseLocalDate(dateStr) {
-    if (!dateStr || typeof dateStr !== 'string') return new Date(3000, 0, 1);
-    const parts = dateStr.trim().split("-");
-    if (parts.length !== 3) {
-        console.warn(`Invalid date string: ${dateStr}`);
-        return new Date(3000, 0, 1);
-    }
-    const [year, month, day] = parts.map(Number);
-    if (isNaN(year) || isNaN(month) || isNaN(day) || year < 1970 || month < 1 || month > 12 || day < 1 || day > 31) {
-        console.warn(`Invalid date string: ${dateStr}`);
-        return new Date(3000, 0, 1);
-    }
-    const date = new Date(year, month - 1, day, 0, 0, 0, 0); // Explicitly set to midnight local time
-    if (isNaN(date.getTime())) {
-        console.warn(`Failed to parse date: ${dateStr}`);
-        return new Date(3000, 0, 1);
-    }
-    return date;
-}
+ 
 
 
 
@@ -655,14 +644,18 @@ const visibleTasks = tasks.filter(task => {
                             task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                             task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-            if (task.settings?.includes("Individual")) {
-                taskHTML += `<strong>${task.title}</strong><br><em>Individual Task</em><br>`;
-                task.users.forEach(user => {
-                    const count = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate].filter(u => u === user).length : 0;
-                    const check = count >= required ? '✅' : '';
-                    taskHTML += `${user}: ${count}/${required} ${check}<br>`;
-                });
-            } else if (task.settings?.includes("Rotation")) {
+                            if (task.settings?.includes("Individual")) {
+    taskHTML += `<strong>${task.title}</strong><br><em>Individual Task</em><br>`;
+    if (typeof calculateIndividualProgress === 'function') {
+        task.users.forEach(user => {
+            const { count, required, isComplete } = calculateIndividualProgress(task, selectedDate, user);
+            const check = isComplete ? '✅' : '';
+            taskHTML += `${user}: ${count}/${required} ${check}<br>`;
+        });
+    } else {
+        taskHTML += `<em style="color:#ff4444;">Error: Progress calculation unavailable</em><br>`;
+    }
+} else if (task.settings?.includes("Rotation")) {
                 const { currentTurn, nextUser, completedCount, repeatLimit } = calculateTurn(task, selectedDate);
                 taskHTML += `
                     <strong>${task.title}</strong><br>
@@ -738,15 +731,18 @@ async function showTaskDetails(task) {
                    task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                    task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-  if (task.settings?.includes("Individual")) {
+                   if (task.settings?.includes("Individual")) {
     taskDetails += `<strong>Individual Progress:</strong><br>`;
-    task.users.forEach(user => {
-      const count = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate].filter(u => u === user).length : 0;
-      const check = count >= required ? '✅' : '';
-      taskDetails += `${user}: ${count}/${required} ${check}<br>`;
-    });
-
-  } else if (task.settings?.includes("Rotation")) {
+    if (typeof calculateIndividualProgress === 'function') {
+        task.users.forEach(user => {
+            const { count, required, isComplete } = calculateIndividualProgress(task, selectedDate, user);
+            const check = isComplete ? '✅' : '';
+            taskDetails += `${user}: ${count}/${required} ${check}<br>`;
+        });
+    } else {
+        taskDetails += `<em style="color:#ff4444;">Error: Progress calculation unavailable</em><br>`;
+    }
+} else if (task.settings?.includes("Rotation")) {
     const rotation = calculateTurn(task, selectedDate);
     taskDetails += `
       <strong>Current Turn:</strong> ${rotation.currentTurn}<br>
