--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 7</span>
+        <span>Home 8</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -446,6 +446,14 @@ body.menu-open {
 
 
   <script>
+
+
+
+if (typeof prepareTaskTurnData === 'undefined') {
+    console.error("taskrotations.js failed to load or does not contain prepareTaskTurnData");
+} else {
+    console.log("taskrotations.js loaded successfully with prepareTaskTurnData");
+}
 
 // Dynamically set footer button links and active state
 // Dynamically set footer button links and active state
@@ -753,6 +761,11 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
+
+
+
+
+
 async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
   try {
     console.log(`Loading tasks for date: ${selectedDate}, attempt: ${attempt}`); // Debug
@@ -829,8 +842,19 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
         return;
       }
 
-      const turns = prepareTaskTurnData(task, selectedDate);
-      tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
+      let turns = [];
+if (typeof prepareTaskTurnData === 'function') {
+    turns = prepareTaskTurnData(task, selectedDate);
+} else {
+    console.error(`prepareTaskTurnData is not defined for task: ${task.title}`);
+    turns = [{
+        user: "Error",
+        repetition: 1,
+        isPending: false,
+        isCompleted: false
+    }];
+}
+tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
       turns.forEach((turn, index) => {
         tasksByTitle[task.title].turns.push({
           user: turn.user,
@@ -1011,11 +1035,15 @@ document.getElementById("scrollRight").addEventListener("click", () => {
 fetchUsers().then(() => generateScrollableDates());
 
 
+
+
+
+
   </script>
 
 
 
-<script src="/BeeMazing-Y1/shared/taskrotations.js"></script>
+<script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
 
 
