--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 8</span>
+        <span>Home 10</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -651,10 +651,20 @@ async function handleReplace(title, date, index, originalUser, event) {
   const taskEntry = event.target.closest(".task-entry");
   const select = taskEntry.querySelector(`#replace-select-${index}`);
   const newUser = select.value;
+
+  // Validate new user
   if (!newUser || newUser === originalUser) {
     const errorDiv = document.createElement("div");
     errorDiv.style.color = "red";
     errorDiv.textContent = "Please select a different user.";
+    taskEntry.appendChild(errorDiv);
+    setTimeout(() => errorDiv.remove(), 3000);
+    return;
+  }
+  if (!allUsers.includes(newUser)) {
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = "Invalid user selected.";
     taskEntry.appendChild(errorDiv);
     setTimeout(() => errorDiv.remove(), 3000);
     return;
@@ -678,11 +688,12 @@ async function handleReplace(title, date, index, originalUser, event) {
     const data = await response.json();
     if (!response.ok) throw new Error(data.error || "Failed to replace user");
 
+    // Update UI only after server confirmation
     const turnEntry = taskEntry.querySelector(`.turn-entry[data-index="${index}"]`);
     turnEntry.querySelector("p").textContent = `Turn ${parseInt(index) + 1}: ${newUser} - Pending`;
     turnEntry.querySelector("select").value = "";
     turnEntry.dataset.user = newUser;
-    setTimeout(() => loadTasks(true), 1000); // Increased delay, force retry
+    setTimeout(() => loadTasks(true), 500); // Reduced delay, force retry
   } catch (err) {
     console.error("Error replacing user:", err);
     const errorDiv = document.createElement("div");
@@ -692,6 +703,9 @@ async function handleReplace(title, date, index, originalUser, event) {
     setTimeout(() => errorDiv.remove(), 3000);
   }
 }
+
+
+
 
 async function handleRevert(title, date, index, user, event) {
   try {
@@ -733,6 +747,8 @@ async function handleRevert(title, date, index, user, event) {
   }
 }
 
+
+
 async function handleReorder(title, date, newUserOrder) {
   try {
     const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
@@ -747,20 +763,18 @@ async function handleReorder(title, date, newUserOrder) {
         selectedDate
       })
     });
-    if (!response.ok) {
-      const data = await response.json();
-      throw new Error(data.error || "Failed to reorder turns");
-    }
-    setTimeout(() => loadTasks(), 4000); // Delay for server sync
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to reorder turns");
+    setTimeout(() => loadTasks(), 500); // Reduced delay
   } catch (err) {
-    console.error("Error reordering turns:", err); // Debug only, no UI
+    console.error("Error reordering turns:", err);
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = "Failed to reorder turns. Please try again.";
+    document.getElementById("taskContainer").appendChild(errorDiv);
+    setTimeout(() => errorDiv.remove(), 3000);
   }
 }
-
-
-
-
-
 
 
 
@@ -843,27 +857,28 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
       }
 
       let turns = [];
-if (typeof prepareTaskTurnData === 'function') {
-    turns = prepareTaskTurnData(task, selectedDate);
-} else {
-    console.error(`prepareTaskTurnData is not defined for task: ${task.title}`);
-    turns = [{
-        user: "Error",
-        repetition: 1,
-        isPending: false,
-        isCompleted: false
-    }];
-}
-tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
-      turns.forEach((turn, index) => {
-        tasksByTitle[task.title].turns.push({
-          user: turn.user,
-          repetition: turn.repetition,
-          index,
-          date: task.date,
-          isPending: turn.isPending,
-          isCompleted: turn.isCompleted
-        });
+      if (typeof prepareTaskTurnData === 'function') {
+          turns = prepareTaskTurnData(task, selectedDate);
+      } else {
+          console.error(`prepareTaskTurnData is not defined for task: ${task.title}`);
+          turns = [{
+              user: "Error",
+              repetition: 1,
+              isPending: false,
+              isCompleted: false
+          }];
+      }
+      tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
+      turns.forEach((turn) => {
+          tasksByTitle[task.title].turns.push({
+              user: turn.user,
+              repetition: turn.repetition,
+              index: turn.repetition - 1, // Align with 0-based indexing
+              date: task.date,
+              isPending: turn.isPending,
+              isCompleted: turn.isCompleted,
+              originalUser: turn.originalUser // Include for replacements
+          });
       });
     });
 
@@ -956,7 +971,6 @@ tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
     document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
   }
 }
-
 
 
 
