--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 11</span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -538,8 +538,9 @@ const taskSettingsLink = document.getElementById('taskSettingsLink');
 
 
 
-
-let selectedDate = new Date().toLocaleDateString("sv-SE");
+        const tomorrow = new Date();
+tomorrow.setDate(tomorrow.getDate() + 1);
+let selectedDate = tomorrow.toLocaleDateString("sv-SE");
 let allUsers = [];
 const expandedTasks = new Set();
 
@@ -978,6 +979,8 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
 
 
 
+
+
 function generateScrollableDates(monthOffset = 0) {
   const container = document.getElementById("dayScrollContainer");
   container.innerHTML = "";
@@ -995,6 +998,10 @@ function generateScrollableDates(monthOffset = 0) {
     year: 'numeric',
   });
 
+  const tomorrow = new Date();
+  tomorrow.setDate(tomorrow.getDate() + 1);
+  const tomorrowStr = tomorrow.toLocaleDateString("sv-SE");
+
   for (let i = 1; i <= daysInMonth; i++) {
     const date = new Date(currentYear, currentMonth, i);
     const btn = document.createElement("div");
@@ -1009,8 +1016,7 @@ function generateScrollableDates(monthOffset = 0) {
       loadTasks();
     });
 
-    const todayStr = new Date().toLocaleDateString("sv-SE");
-    if (btn.dataset.date === todayStr) {
+    if (btn.dataset.date === tomorrowStr) {
       btn.classList.add("selected");
       selectedDate = btn.dataset.date;
       loadTasks();
@@ -1026,6 +1032,22 @@ function generateScrollableDates(monthOffset = 0) {
     }
   }, 50);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 let monthOffset = 0;
 document.getElementById("prevMonth").addEventListener("click", () => {
