--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
+        <span>Home 1</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -538,9 +538,7 @@ const taskSettingsLink = document.getElementById('taskSettingsLink');
 
 
 
-        const tomorrow = new Date();
-tomorrow.setDate(tomorrow.getDate() + 1);
-let selectedDate = tomorrow.toLocaleDateString("sv-SE");
+        let selectedDate = new Date().toLocaleDateString("sv-SE");
 let allUsers = [];
 const expandedTasks = new Set();
 
@@ -998,9 +996,7 @@ function generateScrollableDates(monthOffset = 0) {
     year: 'numeric',
   });
 
-  const tomorrow = new Date();
-  tomorrow.setDate(tomorrow.getDate() + 1);
-  const tomorrowStr = tomorrow.toLocaleDateString("sv-SE");
+  const todayStr = new Date().toLocaleDateString("sv-SE");
 
   for (let i = 1; i <= daysInMonth; i++) {
     const date = new Date(currentYear, currentMonth, i);
@@ -1016,7 +1012,7 @@ function generateScrollableDates(monthOffset = 0) {
       loadTasks();
     });
 
-    if (btn.dataset.date === tomorrowStr) {
+    if (btn.dataset.date === todayStr) {
       btn.classList.add("selected");
       selectedDate = btn.dataset.date;
       loadTasks();
@@ -1032,8 +1028,6 @@ function generateScrollableDates(monthOffset = 0) {
     }
   }, 50);
 }
-
-
 
 
 
