--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1895,6 +1895,8 @@ window.addEventListener("click", (e) => {
 
 
 
+
+
         document.getElementById("addTaskForm").addEventListener("submit", async function (event) {
     event.preventDefault();
 
@@ -1918,8 +1920,25 @@ window.addEventListener("click", (e) => {
     const specificDates = document.getElementById("specificDatesInput").value;
     const specificDays = dateMode === "specific-days" ? selectedDays : [];
 
+    // Validations
     if (!title) {
         alert("Task title is required!");
+        return;
+    }
+    if (users.length === 0) {
+        alert("Please assign at least one user.");
+        return;
+    }
+    if (dateMode === "from-to" && !dateFrom) {
+        alert("Please select a start date.");
+        return;
+    }
+    if (dateMode === "specific-dates" && !specificDates) {
+        alert("Please select at least one date.");
+        return;
+    }
+    if (dateMode === "specific-days" && specificDays.length === 0) {
+        alert("Please select at least one day.");
         return;
     }
 
@@ -1931,95 +1950,68 @@ window.addEventListener("click", (e) => {
     if (timesPerWeek !== null && timesPerWeek < 1) timesPerWeek = 1;
     if (timesPerMonth !== null && timesPerMonth < 1) timesPerMonth = 1;
 
-
-
-
-
-
-    const formatDate = (date) => {
-    return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
-};
-
-let dateValue = "";
-if (dateMode === "from-to" || dateMode === "specific-days") {
-    const fromDate = dateFrom || formatDate(new Date()); // Fallback to today
-    const toDate = dateTo && dateTo !== fromDate && dateDisplayTo.style.display !== "none" ? dateTo : "3000-01-01";
-    dateValue = `${fromDate} to ${toDate}`;
-} else if (dateMode === "specific-dates" && specificDates) {
-    const dates = specificDates.split(",").map(date => new Date(date.trim()));
-    const validDates = dates.filter(date => !isNaN(date.getTime()));
-    if (validDates.length > 0) {
-        const minDate = new Date(Math.min(...validDates));
-        const maxDate = new Date(Math.max(...validDates));
-        dateValue = `${formatDate(minDate)} to ${formatDate(maxDate)}`;
+    let dateValue = "";
+    if (dateMode === "from-to") {
+        const fromDate = dateFrom;
+        const toDate = dateTo || "3000-01-01";
+        dateValue = `${fromDate} to ${toDate}`;
+    } else if (dateMode === "specific-dates" && specificDates) {
+        const dates = specificDates.split(",").map(d => d.trim()).filter(d => d);
+        dateValue = `${dates[0]} to ${dates[dates.length - 1]}`;
+    } else if (dateMode === "specific-days") {
+        const today = new Date().toISOString().split("T")[0];
+        dateValue = `${today} to 3000-01-01`;
     } else {
-        const today = new Date();
-        const farFuture = new Date(3000, 0, 1);
-        dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
+        const today = new Date().toISOString().split("T")[0];
+        dateValue = `${today} to 3000-01-01`;
     }
-} else {
-    const today = new Date();
-    const farFuture = new Date(3000, 0, 1);
-    dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
-}
-
-    const currentAdmin = localStorage.getItem("currentAdminEmail");
 
     const task = {
         title,
-        notes,
-        room,
-        repeat,
-        settings,
+        notes: notes || undefined,
+        room: room || undefined,
+        repeat: repeat || undefined,
+        settings: settings || undefined,
         date: dateValue,
-        reminder,
+        reminder: reminder || undefined,
         users,
-        reward,
-        alarms,
-        timesPerDay,
-        timesPerWeek,
-        timesPerMonth,
-        specificDates: dateMode === "specific-dates" ? specificDates : "",
-        specificDays
+        reward: reward || undefined,
+        alarms: alarms.length > 0 ? alarms : undefined,
+        timesPerDay: repeat === "Daily" ? timesPerDay : undefined,
+        timesPerWeek: repeat === "Weekly" ? timesPerWeek : undefined,
+        timesPerMonth: repeat === "Monthly" ? timesPerMonth : undefined,
+        specificDates: dateMode === "specific-dates" ? specificDates : undefined,
+        specificDays: specificDays.length > 0 ? specificDays : undefined
     };
 
-    console.log("Task being saved:", JSON.stringify(task, null, 2)); // Debug
+    console.log("Task being saved:", JSON.stringify(task, null, 2));
 
+    const currentAdmin = localStorage.getItem("currentAdminEmail");
     const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
 
     try {
-        if (editTask) {
-            const response = await fetch("https://beemazing.onrender.com/api/tasks", {
-                method: "PUT",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    adminEmail: currentAdmin,
-                    task,
-                    originalTitle: editTask.title,
-                    originalDate: editTask.date
-                }),
-            });
+        const url = "https://beemazing.onrender.com/api/tasks";
+        const body = editTask
+            ? {
+                  adminEmail: currentAdmin,
+                  task,
+                  originalTitle: editTask.title,
+                  originalDate: editTask.date
+              }
+            : { adminEmail: currentAdmin, task };
 
-            if (!response.ok) {
-                const errorData = await response.json();
-                throw new Error(`Failed to update task: ${errorData.error}`);
-            }
-        } else {
-            const response = await fetch("https://beemazing.onrender.com/api/tasks", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail: currentAdmin, task }),
-            });
+        const response = await fetch(url, {
+            method: editTask ? "PUT" : "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(body)
+        });
 
-            if (!response.ok) {
-                const errorData = await response.json();
-                throw new Error(`Failed to save task: ${errorData.error}`);
-            }
-        }
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || `HTTP error ${response.status}`);
 
+        console.log("Server response:", data);
         localStorage.removeItem("familyApp_editTask");
         localStorage.removeItem("familyApp_editTask_index");
-
         alert("Task saved successfully!");
         window.location.href = "tasks.html";
     } catch (error) {
