--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 1</span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -449,11 +449,7 @@ body.menu-open {
 
 
 
-if (typeof prepareTaskTurnData === 'undefined') {
-    console.error("taskrotations.js failed to load or does not contain prepareTaskTurnData");
-} else {
-    console.log("taskrotations.js loaded successfully with prepareTaskTurnData");
-}
+
 
 // Dynamically set footer button links and active state
 // Dynamically set footer button links and active state
@@ -778,9 +774,6 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
-
-
-
 async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
   try {
     console.log(`Loading tasks for date: ${selectedDate}, attempt: ${attempt}`); // Debug
@@ -793,7 +786,9 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
       title: t.title,
       users: t.users,
       date: t.date,
-      tempTurnReplacement: t.tempTurnReplacement
+      tempTurnReplacement: t.tempTurnReplacement,
+      timesPerDay: t.timesPerDay,
+      settings: t.settings
     }))); // Debug
 
     const container = document.getElementById("taskContainer");
@@ -828,7 +823,6 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
 
       const existingTask = tasksByTitle[task.title];
       const currentDateRange = task.date;
-      const existingDateRange = existingTask?.date;
       let shouldReplace = false;
 
       if (!existingTask) {
@@ -850,7 +844,8 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
           date: task.date,
           userOrder: task.users || [],
           settings: task.settings || "Rotation",
-          startDate
+          startDate,
+          timesPerDay: task.timesPerDay || 1
         };
       } else {
         console.warn(`Duplicate task title: ${task.title}, date: ${task.date}, keeping date: ${existingTask.date}`); // Debug
@@ -858,28 +853,118 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
       }
 
       let turns = [];
-      if (typeof prepareTaskTurnData === 'function') {
-          turns = prepareTaskTurnData(task, selectedDate);
-      } else {
-          console.error(`prepareTaskTurnData is not defined for task: ${task.title}`);
+      if (task.settings?.includes("Rotation")) {
+        if (typeof calculateTurn !== 'function') {
+          console.error(`calculateTurn is not defined for task: ${task.title}`);
           turns = [{
-              user: "Error",
-              repetition: 1,
-              isPending: false,
-              isCompleted: false
+            user: "Error",
+            repetition: 1,
+            index: 0,
+            date: task.date,
+            isPending: false,
+            isCompleted: false,
+            originalUser: "Error"
           }];
+        } else {
+          const rotation = calculateTurn(task, selectedDate);
+          const completions = (task.completions && task.completions[selectedDate]) || [];
+          const pendingCompletions = (task.pendingCompletions && task.pendingCompletions[selectedDate]) || [];
+          const required = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                          task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                          task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+          // Calculate user completion counts
+          const userCompletionCounts = {};
+          const userPendingCounts = {};
+          completions.forEach(u => {
+            userCompletionCounts[u] = (userCompletionCounts[u] || 0) + 1;
+          });
+          pendingCompletions.forEach(u => {
+            userPendingCounts[u] = (userPendingCounts[u] || 0) + 1;
+          });
+
+          // Generate turns using calculateTurn's logic
+          const totalCompletions = rotation.completedCount;
+          const assignedUsers = rotation.userOrder;
+          for (let i = 0; i < required; i++) {
+            const userIndex = (totalCompletions + i) % (assignedUsers.length || 1);
+            const user = assignedUsers[userIndex] || "Unknown";
+            const originalUser = task.users[userIndex % task.users.length] || user;
+            let isCompleted = false;
+            let isPending = false;
+
+            if (userCompletionCounts[user] && userCompletionCounts[user] > 0) {
+              isCompleted = true;
+              userCompletionCounts[user]--;
+            } else if (userPendingCounts[user] && userPendingCounts[user] > 0) {
+              isPending = true;
+              userPendingCounts[user]--;
+            }
+
+            turns.push({
+              user,
+              repetition: i + 1,
+              index: i,
+              date: task.date,
+              isPending,
+              isCompleted,
+              originalUser
+            });
+          }
+        }
+      } else if (task.settings?.includes("Individual")) {
+        if (typeof calculateIndividualProgress !== 'function') {
+          console.error(`calculateIndividualProgress is not defined for task: ${task.title}`);
+          turns = [{
+            user: "Error",
+            repetition: 1,
+            index: 0,
+            date: task.date,
+            isPending: false,
+            isCompleted: false,
+            originalUser: "Error"
+          }];
+        } else {
+          task.users.forEach((user, index) => {
+            const { count, required, isComplete } = calculateIndividualProgress(task, selectedDate, user);
+            const isPending = task.pendingCompletions?.[selectedDate]?.includes(user) || false;
+            turns.push({
+              user,
+              repetition: count + 1,
+              index,
+              date: task.date,
+              isPending,
+              isCompleted: isComplete,
+              originalUser: user
+            });
+          });
+        }
+      } else {
+        console.warn(`Unsupported task settings for ${task.title}: ${task.settings}`);
+        turns = [{
+          user: "No Settings",
+          repetition: 1,
+          index: 0,
+          date: task.date,
+          isPending: false,
+          isCompleted: false,
+          originalUser: "No Settings"
+        }];
       }
+
+      console.log(`Turns for ${task.title} on ${selectedDate}:`, turns); // Debug
+
       tasksByTitle[task.title].pendingCount += turns.filter(t => t.isPending).length;
       turns.forEach((turn) => {
-          tasksByTitle[task.title].turns.push({
-              user: turn.user,
-              repetition: turn.repetition,
-              index: turn.repetition - 1, // Align with 0-based indexing
-              date: task.date,
-              isPending: turn.isPending,
-              isCompleted: turn.isCompleted,
-              originalUser: turn.originalUser // Include for replacements
-          });
+        tasksByTitle[task.title].turns.push({
+          user: turn.user,
+          repetition: turn.repetition,
+          index: turn.index,
+          date: turn.date,
+          isPending: turn.isPending,
+          isCompleted: turn.isCompleted,
+          originalUser: turn.originalUser
+        });
       });
     });
 
@@ -895,7 +980,7 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
     }
 
     Object.keys(tasksByTitle).forEach(title => {
-      const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
+      const { turns, pendingCount, date, userOrder, settings } = tasksByTitle[title];
       const div = document.createElement("div");
       div.className = "task-entry";
       div.dataset.title = title;
@@ -905,7 +990,7 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
         <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
           ${
             tasksByTitle[title].turns.length && turns[0].repetition !== undefined && turns[0].user !== undefined && tasksByTitle[title].turns
-              ? (tasksByTitle[title].settings === "Rotation"
+              ? (settings.includes("Rotation")
                 ? turns.map(turn => `
                   <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
                     <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
@@ -972,10 +1057,6 @@ async function loadTasks(retry = false, attempt = 1, maxAttempts = 3) {
     document.getElementById("taskContainer").innerHTML = "<p>Error loading tasks. Please try again.</p>";
   }
 }
-
-
-
-
 
 
 
