Change  admin profile

--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,16 +431,16 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
+        <span></span>
     </a>
-    <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
-        <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
-        <span>Profile</span>
-    </a>
-    <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
-        <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-        <span>Market</span>
-    </a>
+    <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
+      <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
+      <span></span>
+  </a>
+  <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
+      <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+      <span></span>
+  </a>
 </div>
 
 
