--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -500,23 +500,35 @@ body {
 
 
     <div class="footer">
-        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
-            <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
-            <span>User Settings</span>
+        <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
+            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>Home</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-            <span>Create Task</span>
+            <span></span>
         </a>
         <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-            <span>Create Reward</span>
+            <span></span>
         </a>
     </div>
 
     <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
     <script>
+
+
+
+document.addEventListener("DOMContentLoaded", () => {
+    const homeLink = document.getElementById("homeLink");
+    const urlParams = new URLSearchParams(window.location.search);
+    const admin = urlParams.get("admin");
+    const user = urlParams.get("user");
+    if (admin && user) {
+        homeLink.href = `/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html?admin=${encodeURIComponent(admin)}&user=${encodeURIComponent(user)}`;
+    }
+});
 
 
 if (typeof calculateIndividualProgress === 'undefined') {
