Change user  profile #2

--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -343,19 +343,20 @@
     </div>
 
     <div class="footer">
-        <a href="#" id="homeButton" class="footer-icon" aria-label="Home">
-          <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>Home</span>
-      </a>
-      <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
-          <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
-          <span>Profile</span>
-      </a>
-      <a href="#" id="marketButton" class="footer-icon active" aria-label="Market">
-          <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-          <span>Market</span>
-      </a>
-  </div>
+        <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
+            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>Home</span>
+        </a>
+        <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
+            <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
+            <span>Tasks</span>
+        </a>
+        <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
+            <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+            <span>Market</span>
+        </a>
+    </div>
+    
 
     <!-- The Key Popup -->
     <div id="keyPopup" class="modal hidden">
